* Fix updating extended page numbering on scan dialog after changing document
* Fix printing. Closes bug #331 (print error suse leap 15.1)
* Set "wait" cursor while scan options are being loaded and "progress" cursor
  while scanning.
* Use gtk-3 cursors for ImageView widget
* Ghost scan button while scan options are being loaded and scanning.
* Update to Czech translation (thanks to Pavel Borecki)


2.5.5 (19.07.2019):

* Fix occasional error messages when clearing all pages
* Only set paper to Manual if not applying profile
* Update OCR view switching between pages with and without OCR output
* xz compress log file if xz available
* Fix bug applying paper after profile set SANE_INFO_INEXACT
* When saving current settings as new profile, actually set the profile
* If a device throws an error when opening it, add it to a session blacklist
* + option tolerance to cover buggy backends that return inexact options
  without setting SANE_INFO_INEXACT
* Update to Hungarian translation (thanks to csola)
* Update to German translation (thanks to Stephan Woidowski)
* Update to Spanish translation (thanks to rodroes)


2.5.4 (20.06.2019):

* Fix bug applying paper whilst setting profile
* Fix canvas usage in scan dialog.
* Allow tabs to be scrolled to reduce width of scan dialog. Closes bug #242
  (Scan Document window cannot be narrowed horizontally)
* Restore split screen view for image and OCR output.
* Update to Hungarian translation (thanks to csola)
* Update to German translation (thanks to Stephan Woidowski)
* Update to Swedish translation (thanks to Anders Jonsson)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.5.3 (20.05.2019):

* Split up messages from gimp and unpaper to allow them to be ignored more
  easily. Closes bug #321
  (Error messages when returning from editing a scanned document using gimp)
* Trap invalid dates in metadata.
  Closes bug #323 (Crash when saving with invalid date)